# platforms

./: Cargo.toml  LICENSE  README.md  hello_world.tmx  mountain_base_tileset.tsx
assets/texture/: mountain_base_tileset.ron
assets/tilemaps/: hello_world1.json  hello_world2.json
assets/tilesets/: mountain_base_tileset.tsx
config/: bindings.ron  constants.ron  display.ron  maps.ron
src/: audio.rs  collisions.rs  game.rs  lib.rs  main.rs  pong.rs  systems.rs  tiles.rs  world.rs
src/collisions/: components.rs  prelude.rs  resolution_utils.rs
src/systems/: apply_velocity.rs  bounce.rs  camera_follow.rs  gravity.rs  move_balls.rs  move_player.rs  ncollide2d_sync.rs  paddle.rs  winner.rs
