[package]
name = "platforms"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15", features = ["vulkan"] }
nalgebra = "0.19"
ncollide2d = "0.21"
hibitset = "0.6.3"
alga = "0.9.3"
log = "0.4.8"

[profile.dev]
incremental = true
