[package]
name = "platforms"
version = "0.1.0"
authors = ["David Ross <daboross@daboross.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alga = "0.9.3"
amethyst = { version = "0.15.0", features = ["vulkan"] }
hibitset = "0.6.3"
log = "0.4.8"
nalgebra = "0.19.0"
ncollide2d = "0.21.0"
serde = { version = "1.0.110", features = ["derive"] }
specs-derive = "0.4.1"

[profile.dev]
incremental = true
